base/infrastructure/gerrit/ingress/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gerrit-web
  namespace: infrastructure
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`gerrit.patinanetwork.org`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: gerrit
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gerrit-websecure
  namespace: infrastructure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gerrit.patinanetwork.org`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: gerrit
          port: 80
  tls:
    secretName: infrastructure-gerrit-tls
